# holonote

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  REPORT.md  docker-compose.prod.yaml  docker-compose.yaml  makefile  nginx.dev.conf  nginx.prod.conf  prompts.md  setup.cfg  test_results.txt
.github/scripts/: .gitleaks-hook.sh
.github/workflows/: cd_deploy.yaml  ci_backend.yaml  ci_frontend.yaml  ci_infra.yaml  release.yaml
backend/: Dockerfile  holonote.db  main.py  requirements.txt
backend/src/api/: router.py
backend/src/core/: auth.py  config.py  metrics.py
backend/src/db/: entries.py  holos.py  session.py  users.py
backend/src/models/: __init__.py  entries.py  holos.py  users.py
backend/src/scripts/: codebase_to_md.py  populate.py
backend/src/services/: user_service.py
backend/tests/: test_entries_api.py  test_entries_db.py
backend/tests/core/: test_auth.py
backend/tests/db/: test_entries_db.py  test_holos_db.py  test_users.py
backend/tests/integration/: test_backend_integration.py
backend/tests/services/: test_user_creation.py
db/: init.sql
documentation/: REPORT.md  prompts.md
frontend/: .env.example  Dockerfile  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
frontend/app/: root.tsx  routes.ts
frontend/app/api/: api.ts  auth.test.ts  auth.ts  entries.mock.ts  entries.test.ts  (+2 more)
infra/: bootstrap-state.sh  main.tf  outputs.tf  terraform.tfvars  variables.tf  versions.tf
nginx/: Dockerfile  entrypoint.sh  nginx.dev.conf  nginx.prod.conf
(+53 files in other folders)
