[metadata]
name = Holonote
version = 0.1.0
description = Journal
author = Juan Alonso-Allende
license = MIT

[options]
packages = find:
include_package_data = True
python_requires = >=3.8

[semantic_release]
# Versioning & Changelog
version_variable = setup.cfg:metadata:version
branch = main
upload_to_pypi = false
upload_to_release = true
changelog_file = CHANGELOG.md

# Commit message style
commit_parser = semantic_release.commit_parser.angular:parser
tag_format = v{version}

# Optional: show only relevant sections in changelog
changelog_sections = feature, fix, docs, style, refactor, test, chore
